feat(serve): materialize an Android (Robolectric) live daemon from a bundle
ServeBundleDaemon.materialize was desktop-only: an android-backend
liveBundle (e.g. an Android/Wear catalog) returned null and fell back to
static baked PNGs + the per-slug figma/<slug>.svg, which collapses every
state/selection variant of a component onto one vector (FilledButton ==
ButtonDisabled == ButtonFocused == …, SwitchOn == SwitchOff, checkbox
checked == unchecked).

Make it backend-aware, mirroring `bundle daemon`'s two launches over the
same DaemonMain: desktop keeps lib-daemon-desktop + lib-renderer; android
uses lib-daemon-android + android.jar + the JDK-17 --add-opens and
robolectric.* sysprops from AndroidBundleLaunch. Everything downstream
(openHost → ServeRenderHost → ServeCatalogLiveHost, render + the
per-variant compose/figma-svg renderSvg lane + streaming) is already
renderer-agnostic, so a Wear catalog with an android liveBundle now gets
per-variant SVGs (matching its PNGs) and a live tier — for free.

Adds an SDK-gated e2e (skips unless pointed at a packed android bundle +
the lib-daemon-android sidecar) that materializes the wear-m3 bundle and
asserts slug-sharing state pairs render byte-different SVGs through the
real Robolectric daemon.